--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,20 @@
 
     <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript">
-        alert(111)
+
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        alert("start ga = " + ga );
+
+        function init() {
+            alert("init ga = " + ga );
+        }
     </script>
 </head>
-<body>
+<body onload="init()">
 
 22222222
 
