--- a/www/index.html
+++ b/www/index.html
@@ -15,12 +15,12 @@
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        alert("start ga = " + ga );
+        })(window,document,'script','analytics.js','ga');
 
         function init() {
-            alert("init ga = " + ga );
+            ga('create', 'UA-57490660-1', 'auto');  // Creates a tracker.
+            ga('send', 'pageview');
+            alert("init");
         }
     </script>
 </head>
