--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,9 @@
     <title>Station Locator GA</title>
 
     <script type="text/javascript" src="phonegap.js"></script>
-    <script type="text/javascript">
+
+
+    <!--script type="text/javascript">
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -22,7 +24,34 @@
             ga('send', 'pageview');
             alert("init");
         }
+    </script-->
+
+    <!--script type="text/javascript" src="analytics.js"></script>
+    <script>
+        function init() {
+            var ga = ga || [];
+            ga.push(['_setAccount', 'UA-57490660-2']);
+            ga.push(['_setDomainName', 'none']);
+            setInterval(function(){
+                ga.push(['_trackPageview', 'index'+Math.random()*10000 ]);
+            },1000);
+
+            alert("init");
+        }
+    </script-->
+
+    <script type="text/javascript" src="GALocalStorage.js"></script>
+    <script>
+        ga_storage._setAccount('UA-57490660-2'); //Replace with your own
+        ga_storage._trackPageview('/index.html');
+
+        setInterval(function(){
+            ga_storage._trackPageview('/index.html');
+        },1000);
+
     </script>
+
+
 </head>
 <body onload="init()">
 
