--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
         var count = 0;
         setInterval(function(){
             count++;
-            ga_storage._trackPageview('go_page_offline_'+count, 'title');
+            ga_storage._trackPageview('go_page_android_'+count, 'title');
         },5000);
 
     </script>
